--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^16.9.49",
     "next": "9.5.3",
     "next-i18next": "^6.0.2",
+    "normalize.css": "^8.0.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "typescript": "^4.0.2"
