--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "^4.0.2"
   },
   "devDependencies": {
+    "@svgr/webpack": "^5.4.0",
     "@typescript-eslint/eslint-plugin": "^4.1.1",
     "@typescript-eslint/parser": "^4.1.1",
     "eslint": "^7.9.0",
@@ -28,6 +29,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.1.2",
-    "prettier": "^2.1.2"
+    "prettier": "^2.1.2",
+    "url-loader": "^4.1.0"
   }
 }
