--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@stitches/react": "^0.0.2",
     "@types/node": "^14.10.3",
     "@types/react": "^16.9.49",
-    "next": "9.5.3",
+    "next": "^10.0.3",
     "next-i18next": "^6.0.2",
     "normalize.css": "^8.0.1",
     "react": "16.13.1",
