--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
-    "@stitches/react": "^0.0.2",
     "@types/node": "^14.10.3",
     "@types/react": "^16.9.49",
+    "autoprefixer": "^10.0.4",
+    "clsx": "^1.1.1",
     "next": "^10.0.3",
     "next-i18next": "^6.0.2",
-    "normalize.css": "^8.0.1",
+    "postcss": "^8.1.14",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "tailwindcss": "^2.0.1",
     "typescript": "^4.0.2"
   },
   "devDependencies": {
